dev/tests/cases/neg/50_str_concat_one_arg.tv
df main() -> void {
    echo!(str_concat("lonely"));
}
